# nexa-curl-Beautiful-Windows-friendly-cURL-REPL-history-presets-paste-mode-

./: LICENSE  README.md  httpbin-post.curl  nexa_curl.py  pyproject.toml  requirements.txt
